--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo-rails": "^7.3.0",
+    "sortablejs": "^1.15.0",
+    "stimulus": "^3.2.1",
+    "stimulus-sortable": "^4.1.0",
     "webpack": "^5.84.0",
     "webpack-cli": "^5.1.1"
   },
